# lilium-sys

./: Cargo.toml
include/: errors.h
include/syscalls/: base.h  thread.h
src/: atomic.rs  fs.rs  handle.rs  info.rs  io.rs  lib.rs  misc.rs  os.rs  process.rs  random.rs  result.rs  security.rs  sync.rs  sys.rs  thread.rs  time.rs  uuid.rs
src/sync/: event.rs  mutex.rs  once.rs
src/sys/: arch_ctl.rs  auxv.rs  config.rs  debug.rs  def_option_types.rs  device.rs  dispatch.rs  error.rs  event.rs  except.rs  fs.rs  handle.rs  info.rs  io.rs  ipc.rs  isolation.rs  kmgmt.rs  kstr.rs  link_usi.rs  option.rs  permission.rs  process.rs  random.rs  result.rs  signal.rs  socket.rs  sysno.rs  thread.rs  time.rs  vti.rs
src/sys/arch_ctl/arch/: clever.rs  x86.rs
src/sys/config/arch/: clever.rs  x86.rs
src/sys/device/: udev.rs
src/sys/info/: clever.rs  x86.rs
src/sys/permission/: encoded.rs
src/sys/vti/arch/: x86.rs
