[package]
name = "lilium-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
with_builtin_macros = "0.0.3"
bitflags = "2.0.0-rc.1"
paste = "1.0.12"
hashbrown = { version = "0.14.0", optional = true }
fxhash = { version = "0.2.1", optional = true }
bytemuck = { version = "1.14", features = [
    "derive",
    "min_const_generics",
    "zeroable_maybe_uninit",
    "zeroable_atomics",
    "must_cast",
], optional = true }
cfg-if = "1.0.0"
sptr = { version = "0.3.2", optional = true }
uuid = { version = "1.13.1", optional = true, default-features = false }

[features]
default = ["api", "core-subsys"]
bytemuck = ["dep:bytemuck"]
std = []
unstable-std-io_error_more = []
alloc = []
api = ["dep:hashbrown", "dep:fxhash", "dep:sptr", "alloc", "error-enum"]
error-enum = []
raw = []
link-usi = []

libc = []
rtld = []
core-subsys = ["base", "thread", "io", "process", "debug", "kmgmt"]
base = []
thread = []
io = []
process = []
debug = []
kmgmt = []
vti = []
uuid-crate = ["dep:uuid"]
