[package]
name = "lilium-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
with_builtin_macros = { version = "0.0.3", optional = true }
bitflags = { version = "2.0.0-rc.1", optional = true }
paste = { version = "1.0.12", optional = true }
# hashbrown = { version = "0.14.0", optional = true }
bytemuck = { version = "1.14", features = [
    "derive",
    "min_const_generics",
    "zeroable_maybe_uninit",
    "zeroable_atomics",
    "must_cast",
], optional = true }
cfg-if = "1.0.0"
sptr = { version = "0.3.2", optional = true }
uuid = { version = "1.13.1", optional = true, default-features = false }
lock_api = { version = "0.4.12", optional = true }
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }

[features]
default = ["api", "core-subsys", "error-num"]
bytemuck = ["dep:bytemuck"]
std = []
unstable-std-io_error_more = []
alloc = []
api = ["dep:sptr", "alloc", "error-enum", "dep:bitflags"]
error-enum = ["dep:paste", "error-num"]
error-num = ["dep:with_builtin_macros"]
raw = ["dep:with_builtin_macros"]
link-usi = []

libc = []
rtld = []
core-subsys = ["base", "thread", "io", "process", "debug", "kmgmt"]
base = []
thread = []
io = []
process = []
debug = []
kmgmt = []
vti = []
uuid-crate = ["dep:uuid"]
sync-mutex = ["dep:lock_api"]
once-lock = []

__ra_all_features = [
    "bytemuck",
    "std",
    "unstable-std-io_error_more",
    "alloc",
    "api",
    "error-enum",
    "error-num",
    "raw",
    "libc",
    "rtld",
    "core-subsys",
    "vti",
    "uuid-crate",
    "sync-mutex",
    "once-lock",
]

rustc-dep-of-std = ["dep:core"]
